--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "expo": "~53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-device": "~7.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.2",
     "expo-print": "~14.1.4",
     "expo-router": "~5.0.6",
     "expo-secure-store": "~14.2.3",
